# DbNodes

./: .gitignore  CMakeLists.txt  DbNodes.pro  config.h.in  dbnodes.ini  deletearrowbutton.cpp  deletearrowbutton.h  helper.cpp  helper.h  main.cpp  mainwindow.cpp  mainwindow.h  namenewproject.cpp  namenewproject.h  node.cpp  node.h  noderow.cpp  noderow.h  relationmaker.cpp  relationmaker.h  res.qrc  settings  workarea.cpp  workarea.h
content/: startup.txt
icons/dark/: config.ini
src/: helper.cpp  helper.h
src/Abstract/: AbstractModal.cpp  AbstractModal.h  AbstractNode.cpp  AbstractNode.h  AbstractRelationView.cpp  AbstractRelationView.h  AbstractSettingModal.cpp  AbstractSettingModal.h  CMakeLists.txt  DrawableWidget.cpp  DrawableWidget.h  JsonObject.h  StructDictionary.h
src/Assets/: CMakeLists.txt  Styles.cpp  Styles.h
src/Dictionaries/: CMakeLists.txt  DbTableTypesDictionary.h  DbTableTypesFkDictionary.h  DefaultProjectSettingsDictionary.h  OpenFileExceptionsDictionary.h  RelationLinkPositionsDictionary.h  RelationMakerErrors.h  RelationMakerErrorsDictionary.h  RelationPositionsDictionary.h  RelationTypesDictionary.h  SaveFileTypesDictionary.h  StylesDictionary.h
src/Modals/: CMakeLists.txt  ConfirmCloseProject.cpp  ConfirmCloseProject.h  Finder.cpp  Finder.h  NameNewProject.cpp  NameNewProject.h  NewProject.cpp  NewProject.h  RelationMaker.cpp  RelationMaker.h  Settings.cpp  Settings.h  TableConstructor.cpp  TableConstructor.h  TableRename.cpp  TableRename.h
src/Nodes/: TableNode.cpp  TableNode.h
src/Nodes/Table/: Column.cpp  Column.h
src/Relations/: CMakeLists.txt  Relation.cpp  Relation.h  RelationFactory.cpp  RelationFactory.h  RelationProvider.cpp  RelationProvider.h
src/Relations/RelationProviders/: DeleteRelationButtonProvider.cpp  RelationLinkProvider.cpp
src/Relations/RelationViews/: DeleteRelationButton.cpp  DeleteRelationButton.h  RelationLink.cpp  RelationLink.h
src/Relations/RelationViews/Path/: PathPoint.cpp  PathPoint.h
src/Saving/: CMakeLists.txt  FileResolver.h  SaveManager.cpp  SaveManager.h
src/Saving/Files/: DbnFileResolver.cpp  DbnFileResolver.h
src/Saving/Files/DbnFileStruct/: ColumnObject.h  ProjectObject.h  ProjectParametersObject.h  RelationObject.h  TableObject.h
src/Settings/: CMakeLists.txt  MainSettings.cpp  MainSettings.h  Parser.cpp  Parser.h  SettingsManager.cpp  SettingsManager.h  Writer.cpp  Writer.h
src/Utils/: CMakeLists.txt
src/Utils/MultipleSelection/: Repository.cpp  Repository.h  Selectable.cpp  Selectable.h
src/Utils/RelationPath/: Render.cpp  Render.h
src/Widgets/: CMakeLists.txt  DeleteArrowButton.cpp  DeleteArrowButton.h  MainWindow.cpp  MainWindow.h  Node.cpp  Node.h  Noderow.cpp  Noderow.h  StartupWidget.cpp  StartupWidget.h  Workarea.cpp  Workarea.h
src/Widgets/StartupWidget/: MainWidget.cpp  MainWidget.h  Menu.cpp  Menu.h
styles/: NodeRowIsNull.css  delateArrowButton.css  lineEdit.css  lineEditError.css  main.css  nodeMenu.css  nodeRowTitle.css  nodeTitle.css  relationMaker.css  relationMakerButton.css  relationMakerSelector.css  title.css  workAreaMenu.css
styles/dark/: button.qss  columnTypes.qss  crossButton.qss  delateArrowButton.qss  deleteArrowButton.qss  dropButton.qss  fkChainButton.qss  lineEdit.qss  lineEditError.qss  main.qss  node.qss  outline.qss  relationMakerArrow.qss  relationMakerSelector.qss  settingsComboBox.qss  startupWidget.qss  title.qss  workAreaMenu.qss
styles/light/: config.ini  crossButton.qss  delateArrowButton.qss  deleteArrowButton.qss  dropButton.qss  fkNodeRow.qss  fkNodeRowIsNull.qss  fkNodeRowTitle.qss  lineEditName.qss  main.qss  node.qss  nodeRow.qss  nodeRowTitle.qss  nodeRowTypes.qss  nodeTitle.qss  pkNodeRow.qss  pkNodeRowTitle.qss  relationMakerSelector.qss  settingsCheckBox.qss  startupWidget.qss  subWindow.qss  workAreaMenu.qss
